Punctuation and small improvements
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/partial/develop.partial.html
+++ b/partial/develop.partial.html
@@ -193,7 +193,7 @@ mvn package
         containers for related classes rather than packages. Within a class file, it is possible to define a finer
         visibility scope than for top-level classes, for example by allowing for <code>protected</code> classes that
         are only to be seen by subclasses or within the class that is using another class internally. Also, when
-        a class is not longer needed as the result of refactoring, this grouping convention makes it easy to
+        a class is no longer needed as the result of refactoring, this grouping convention makes it easy to
         delete all dependant code.
     </p>
 
