Removes sentence "Java 9 support is currently still experimental"
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/partial/develop.partial.html
+++ b/partial/develop.partial.html
@@ -250,9 +250,9 @@ mvn package
         and is considered to be feature-complete aside from two features that are
         not yet supported. With the release of version 1.0 a big emphasis is put on the library's stability and performance
         and new features are added defensively. Naturally, the evolution of the Java programming language and the
-        byte code format will require newer releases in the future where it is the goal of Byte Buddy to offer
-        a backwards compatible way of manipulating code for older and newer versions of Java. Java 9 support is currently
-        still experimental. As of Java 8, Byte Buddy not currently support the following functionality:
+        byte code format will require newer releases in the future, where it is the goal of Byte Buddy to offer
+        a backwards compatible way of manipulating code for older and newer versions of Java.
+        Regarding Java 8, Byte Buddy currently doesn't support the following functionality:
     </p>
 
     <dl>
