Adds references to benchmarks table
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -287,7 +287,7 @@ class HardcodedFrameworkImpl implements Framework {
     <table class="table table-section-border">
         <thead>
         <tr>
-            <td></td>
+            <td>Metric</td>
             <td colspan="2">baseline</td>
             <td colspan="2">Byte Buddy</td>
             <td colspan="2">cglib</td>
@@ -297,7 +297,7 @@ class HardcodedFrameworkImpl implements Framework {
         </thead>
         <tbody>
         <tr class="table-section section-uneven">
-            <td>trivial class creation</td>
+            <td>trivial class creation (1)</td>
             <td>0.003</td>
             <td>(0.001)</td>
             <td>142.772</td>
@@ -310,7 +310,7 @@ class HardcodedFrameworkImpl implements Framework {
             <td>(0.645)</td>
         </tr>
         <tr class="table-section section-even">
-            <td>interface implementation</td>
+            <td>interface implementation (2a)</td>
             <td>0.004</td>
             <td>(0.001)</td>
             <td>1'126.364</td>
@@ -323,7 +323,7 @@ class HardcodedFrameworkImpl implements Framework {
             <td>(12.231)</td>
         </tr>
         <tr class="table-section section-uneven">
-            <td>stub method invocation</td>
+            <td>stub method invocation (2b)</td>
             <td>0.002</td>
             <td>(0.001)</td>
             <td>0.002</td>
@@ -336,10 +336,10 @@ class HardcodedFrameworkImpl implements Framework {
             <td>(0.001)</td>
         </tr>
         <tr class="table-section section-even">
-            <td>class extension</td>
+            <td>class extension (3a)</td>
             <td>0.004</td>
             <td>(0.001)</td>
-            <td>885.983<br/><i>5'408.329<i></td>
+            <td>885.983<br/><i>5'408.329</i></td>
             <td>(7.901)<br/><i>(52.437)</i></td>
             <td>1'632.730</td>
             <td>(52.737)</td>
@@ -348,7 +348,7 @@ class HardcodedFrameworkImpl implements Framework {
             <td colspan="2">&ndash;</td>
         </tr>
         <tr class="table-section section-uneven">
-            <td>super method invocation</td>
+            <td>super method invocation (3b)</td>
             <td>0.004</td>
             <td>(0.001)</td>
             <td>0.004<br/><i>0.004</i></td>
