--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -727,8 +727,7 @@ Class&lt;?&gt; type = new ByteBuddy()
 <p>
     In a previous section, we learned how Byte Buddy can be used in order to redefine or to rebase an existing class.
     During the execution of a Java program, it is however often impossible to guarantee that a specific class is not
-    already loaded. (Furthermore, Byte Buddy currently only takes loaded classes as its argument, this will change
-    in future versions where the existing API can be used to equally work with unloaded classes.) Thanks to the
+    already loaded. Thanks to the
     Java virtual machine's HotSwap feature, existing classes can however be redefined even after they are loaded.
     This feature is made accessible by Byte Buddy's <code>ClassReloadingStrategy</code>. Let us demonstrate this
     strategy by redefining a class <code>Foo</code>:
