--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -2124,9 +2124,9 @@ UserType userType = (UserType) factory.makeInstance();
         exception.
     </span></li>
     <li><span>
-        The <code>Forwarding</code> implementations allows to simply forward a method call to another instance
+        The <code>MethodCall</code> implementation allows to simply forward a method call to another instance
         of the same type as the declaring type of an intercepted method. The same result can be achieved using a
-        <code>MethodDelegation</code>. However, by <code>Forwarding</code> a simpler delegation model is applied
+        <code>MethodDelegation</code>. However, by <code>MethodCall</code> a simpler delegation model is applied
         which can cover use cases where no target method discovery is required.
     </span></li>
     <li><span>
