Replaces references to AnnotationFilter that is now AnnotationRetention.
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/partial/tutorial.partial.cn.html
+++ b/partial/tutorial.partial.cn.html
@@ -1750,7 +1750,7 @@ new ByteBuddy()
 
     <p>
         默认情况下，Byte Buddy 将注解的任何属性都包含到类文件里，包括通过<code>default</code>值隐式指定的默认属性。但是，
-        可以通过为<code>ByteBuddy</code>实例提供一个<code>AnnotationFilter</code>来自定义这个行为。
+        可以通过为<code>ByteBuddy</code>实例提供一个<code>AnnotationRetention</code>来自定义这个行为。
     </p>
 
 <h4>类型注解</h4>
