Removes sentence about adding new features to the lib
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -1868,8 +1868,7 @@ new ByteBuddy()
 <p>
     However, by using custom implementations, you are able to define your own constructors by either implementing a
     custom <code>ConstructorStrategy</code> or by defining an individual constructor within Byte Buddy's domain specific
-    language using the <code>defineConstructor</code> method. Furthermore, we are planing to add new features to Byte
-    Buddy for defining more complex constructors out of the box.
+    language using the <code>defineConstructor</code> method.
 </p>
 
 <p>
