--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -503,8 +503,8 @@ DynamicType.Unloaded&lt;?&gt; dynamicType = new ByteBuddy()
 </p>
 
 <p>
-    <b>As an implication of the mentioned immutability, you must be careful when for example configuring
-    <code>ByteBuddy</code> instances. You might for example make the following mistake</b>:
+    <b>As an implication of the mentioned immutability, you must be careful when, for example, configuring
+    <code>ByteBuddy</code> instances. You must avoid mistakes such as the following one</b>:
 </p>
 
 <pre class="prettyprint">
