--- a/partial/main.partial.html
+++ b/partial/main.partial.html
@@ -9,7 +9,7 @@
     </div>
     <div class="clearfix"></div>
 </div>
-<div class="row" id="welcome">
+<div class="row" id="welcome" ng-controller="dataController">
     <div class="col-md-7 col-md-offset-3">
         <div class="row">
             <div class="col-md-8 col-xs-12">
@@ -30,7 +30,7 @@
         </div>
         <p>
             In order to use Byte Buddy, one does not require an understanding of Java byte code or the
-            <a href="https://docs.oracle.com/javase/specs/jvms/se8/html/jvms-4.html">class file format</a>.
+            <a data-ng-href="{{classFileFormatUrl}}">class file format</a>.
             In contrast, Byte Buddy's API aims for code that is concise and easy to understand for
             everybody. Nevertheless, Byte Buddy remains fully customizable down to the possibility of defining custom
             byte code. Furthermore, the API was designed to be as non-intrusive as possible and as a result, Byte
@@ -40,9 +40,9 @@
         </p>
 
         <p>
-            Byte Buddy is written in Java 5 but supports the generation of classes for any Java version. Byte Buddy is a
+            Byte Buddy is written in Java {{javaVersion}} but supports the generation of classes for any Java version. Byte Buddy is a
             light-weight library and only depends on the visitor API of the Java byte code parser library
-            <a href="https://asm.ow2.org/">ASM</a> which does itself
+            <a data-ng-href="{{classFileFormatUrl}}">ASM</a> which does itself
             <a href="https://search.maven.org/remotecontent?filepath=org/ow2/asm/asm/4.2/asm-4.2.pom">not require any
                 further dependencies</a>.
         </p>
@@ -69,7 +69,7 @@
 
             <p style="margin: 3px 10px;">
                 In October 2015, Byte Buddy was distinguished with a
-                <a href="https://www.oracle.com/corporate/pressrelease/dukes-award-102815.html"><i>Duke's Choice award</i></a>
+                <a href="https://web.archive.org/web/20160121224941/https://www.oracle.com/corporate/pressrelease/dukes-award-102815.html"><i>Duke's Choice award</i></a>
                 by Oracle. The award appreciates Byte Buddy for its &quot;<i>tremendous amount of innovation in Java
                 Technology</i>&quot;. We feel very honored for having received this award and want to thank all users
                 and everybody else who helped making Byte Buddy the success it has become. We really appreciate it!
@@ -82,9 +82,9 @@
 
         <p>
             Byte Buddy offers excellent performance at production quality. It is stable and in use by distinguished
-            frameworks and tools such as <a href="http://mockito.io">Mockito</a>,
+            frameworks and tools such as <a href="https://mockito.org">Mockito</a>,
             <a href="https://hibernate.org">Hibernate</a>,
-            <a href="https://bazel.io">Google's Bazel build system</a> and
+            <a href="https://bazel.build">Google's Bazel build system</a> and
             <a href="https://github.com/raphw/byte-buddy/wiki/Projects-using-Byte-Buddy">many others</a>. Byte Buddy
             is also used by a large number of commercial products to great result. It is currently downloaded over 75
             million times a year.
@@ -165,14 +165,14 @@ assertThat(dynamicType.newInstance().toString(), is("Hello World!"));
         </p>
     </div>
 </div>
-<div class="row" id="getbytebuddy">
+<div class="row" id="getbytebuddy" ng-controller="dataController">
     <div class="col-md-7 col-md-offset-3">
         <h2>Getting Byte Buddy</h2>
         <dl>
             <dt>Download</dt>
             <dd>
                 <div>
-                    You can download Byte Buddy directly from 
+                    You can download Byte Buddy directly from
                     <a href="https://search.maven.org/search?q=g:net.bytebuddy">Maven Central</a>.
                     Alternatively, you can also download the
                     <a href="https://github.com/raphw/byte-buddy/releases">source code from GitHub</a>.
@@ -200,9 +200,9 @@ assertThat(dynamicType.newInstance().toString(), is("Hello World!"));
                         <pre class="prettyprint" data-ng-bind="tab.content"></pre>
                     </tab>
                 </tabset>
-                The artifacts signatures can be validated against 
-                <a href="https://keys.openpgp.org/search?q=rafael.wth@gmail.com">this PGP public key</a> 
-                beginning with Byte Buddy 1.10.3. Older versions can be validated against 
+                The artifacts signatures can be validated against
+                <a href="https://keys.openpgp.org/search?q=rafael.wth@gmail.com">this PGP public key</a>
+                beginning with Byte Buddy 1.10.3. Older versions can be validated against
                 <a href="https://keyserver.ubuntu.com/pks/lookup?op=get&search=0xf42b96b8648b5c4a1c43a62fbb2914c1fa0811c3">this older and weaker certificate</a>.
             </dd>
         </dl>
@@ -212,7 +212,7 @@ assertThat(dynamicType.newInstance().toString(), is("Hello World!"));
                 Byte Buddy is an open source project distributed under the liberal and business-friendly
                 <a href="https://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0 licence</a>. Its source code is
                 <a href="https://github.com/raphw/byte-buddy">freely available on GitHub</a>. Please note that Byte
-                Buddy depends on <a href="https://asm.ow2.io/license.html">the ASM library which is distributed under
+                Buddy depends on <a href="{{asmUrl}}/license.html">the ASM library which is distributed under
                 a 3-clause BSD license</a>.
             </dd>
         </dl>
@@ -247,17 +247,17 @@ assertThat(dynamicType.newInstance().toString(), is("Hello World!"));
         <dl>
             <dt>Tidelift</dt>
             <dd>
-                Byte Buddy is 
+                Byte Buddy is
                 <a href="https://tidelift.com/subscription/pkg/maven-net-bytebuddy-byte-buddy?utm_source=byte-buddy&utm_medium=referral">
-                listed on Tidelift</a>. If you are not using Byte Buddy to an extend where you want to purchase explicit support and want 
+                listed on Tidelift</a>. If you are not using Byte Buddy to an extend where you want to purchase explicit support and want
                 to support the open source community in general, please consider a subscription.
             </dd>
         </dl>
         <dl>
             <dt>GitHub Sponsors</dt>
             <dd>
-                You can support my work via <a href="https://github.com/sponsors/raphw">GitHub sponsors</a>. Note that this option is only 
-                meant for commercial actors who are looking for a simple payment channel and that do not expect support in return. Support 
+                You can support my work via <a href="https://github.com/sponsors/raphw">GitHub sponsors</a>. Note that this option is only
+                meant for commercial actors who are looking for a simple payment channel and that do not expect support in return. Support
                 via GitHub Sponsors is not possible to maintain VAT compliance. Please reach out for a direct support agreement instead.
             </dd>
         </dl>
@@ -265,7 +265,7 @@ assertThat(dynamicType.newInstance().toString(), is("Hello World!"));
             <dt>Free</dt>
             <dd>
                 General questions can be asked on <a href="https://stackoverflow.com/questions/tagged/byte-buddy">Stack Overflow</a>
-                or on the <a href="https://groups.google.com/forum/#!forum/byte-buddy">Byte Buddy mailing list</a> which also
+                or on the <a href="https://groups.google.com/g/byte-buddy">Byte Buddy mailing list</a> which also
                 serve as an archive for questions. Of course, bug reports will be considered also outside of a commercial
                 plan. For open source projects, it is sometimes possible to receive extended help for taking Byte Buddy into
                 use.
@@ -274,12 +274,12 @@ assertThat(dynamicType.newInstance().toString(), is("Hello World!"));
     </div>
 </div>
 
-<div class="row" id="dependency">
+<div class="row" id="dependency" ng-controller="dataController">
     <div class="col-md-7 col-md-offset-3">
         <h2>Dependency maintenance</h2>
 
         <p>
-            Byte Buddy is written on top of <a href="https://asm.ow2.org">ASM</a>, a mature and well-tested
+            Byte Buddy is written on top of <a data-ng-href="{{asmUrl}}">ASM</a>, a mature and well-tested
             library for reading and writing compiled Java classes. In order to allow for advanced type
             manipulations, Byte Buddy is intentionally exposing the ASM API to its users. Of course, the direct
             use of ASM remains fully optional and most users will most likely never require it. This choice was
@@ -291,7 +291,7 @@ assertThat(dynamicType.newInstance().toString(), is("Hello World!"));
             ASM has previously changed its public API but added a mechanism for API compatibility starting with version
             4 of the library. In order to avoid version conflicts with such older versions, Byte Buddy repackages the
             ASM dependency into its own namespace. If you want to use ASM directly, use the <code>byte-buddy-dep</code>
-            artifact offers a version of Byte Buddy with an explicit dependency to ASM. When doing so, you <b>must</b>
+            artifact that offers a version of Byte Buddy with an explicit dependency to ASM. When doing so, you <b>must</b>
             repackage <b>both</b> Byte Buddy and ASM into your namespace to avoid version conflicts.
         </p>
     </div>
