--- a/partial/develop.partial.html
+++ b/partial/develop.partial.html
@@ -246,7 +246,7 @@ mvn package
     <h2>Roadmap</h2>
 
     <p>
-        Byte Buddy has reached version <img style="width: 58px; height: 22px; object-fit: cover; object-position: right;" alt="Maven Central Version" src="https://img.shields.io/maven-central/v/net.bytebuddy/byte-buddy?style=flat-square">
+        Byte Buddy has reached version <img style="width: 58px; height: 22px; object-fit: cover; object-position: right;" alt="Maven Central Version" src="https://img.shields.io/maven-central/v/net.bytebuddy/byte-buddy">
         and is considered to be feature-complete aside from two features that are
         not yet supported. With the release of version 1.0 a big emphasis is put on the library's stability and performance
         and new features are added defensively. Naturally, the evolution of the Java programming language and the
